fix: line breaks in terms and conditions
I would rather update the T&C to encode the line breaks there, but this
will do for now.

--- a/src/styles/quarks/_typography.scss
+++ b/src/styles/quarks/_typography.scss
@@ -34,3 +34,9 @@
 .u-text-underline {
 	text-decoration: underline;
 }
+
+/* Applies white-space pre-wrap on paragraphs, self or children. */
+p.u-pre-wrap-p,
+.u-pre-wrap-p p {
+  white-space: pre-wrap;
+}
